# PicoV3

./: .gitignore  README.md  pyproject.toml
migrations/: migrate_pico_db.py  test_add_and_remove_column.py
picov3/: __main__.py  bot.py  constants.py  helpers.py  models.py  pico_models.py
picov3/cogs/: __init__.py  channels.py  characters.py  emoji.py  list.py  score.py
picov3/tasks/: scheduler.py
